--- a/assets/css/sass/woocommerce/thankyou.scss
+++ b/assets/css/sass/woocommerce/thankyou.scss
@@ -1,118 +1,155 @@
-.woocommerce-thankyou-order-received{
-    display: block;
-    clear: both;
+.woocommerce-order-received {
+	.woocommerce-order {
+		max-width: 800px;
+		margin: 0 auto;
+	}
 }
 
-.woocommerce-thankyou-order-details{
-    padding-left: 0;
-    margin-bottom: 50px;
-    display: flex;
-    justify-content: space-between;
-    border: 1px solid #e8e8e8;
-    li{
-        list-style: none;
-        padding: 10px 15px;
-        flex-basis: 25%;
-        +li{
-        	border-left: 1px dashed #e8e8e8;
-        }
-    }
-    strong{
-        display: block;
-        font-weight: normal;
-    }
+.woocommerce-thankyou-order-received {
+	display: block;
+	clear: both;
+	padding: 20px;
+	margin-bottom: 50px;
+	text-align: center;
+	font-weight: 700;
+	font-size: 1.5em;
+	border: 2px dashed transparent;
 }
 
-.woocommerce-order-details{
-	.woocommerce-order-details__title{
+.woocommerce-thankyou-order-details {
+	padding-left: 0;
+	margin-bottom: 50px;
+	display: flex;
+	justify-content: space-between;
+	text-align: center;
+	@media ( max-width: $screen-md - 1 ) {
+		flex-wrap: wrap;
+	}
+
+	li {
+		list-style: none;
+		padding: 10px 15px;
+		flex-basis: 25%;
+
+		@media ( max-width: $screen-md - 1 ) {
+			flex-basis: 100%;
+			border-bottom: 1px dashed #e8e8e8;
+		}
+
+		+li {
+			border-left: 1px dashed #e8e8e8;
+
+			@media ( max-width: $screen-md - 1 ) {
+				border-left: 0;
+			}
+		}
+	}
+
+	strong {
+		display: block;
+		font-weight: normal;
+	}
+}
+
+.woocommerce-order-details {
+	.woocommerce-order-details__title {
 		font-size: 1.35em;
 		font-weight: normal;
-		background-color: #fbfbfb;
 		padding: 1em;
 		margin: 0;
-		border: 1px solid #eaeaea;
 		border-bottom: 0;
+		text-transform: uppercase;
+		font-weight: 700;
+		text-align: center;
 	}
 }
 
-.woocommerce-table--order-details{
-    margin-bottom: 50px;
-    margin-top: 0;
-    .wc-item-meta{
-        padding-left: 0;
-        margin: 0;
-        li{
-            list-style: none;
-            +li{
-                margin-top: 10px;
-            }
-            p{
-                display: inline-block;
-            }
-        }
-    }
-    thead{
-    	th{
-    		border-left: 0;
-    	}
-    }
-    tbody{
-    	strong{
-    		font-weight: normal;
-    	}
-    }
-    tr{
-        &:nth-child( 2n ) {
-            td{
-                background: #fdfdfd;
-            }
-        }
-    }
-    th{
-        background: #f8f8f8;
-        font-weight: 600;
-    }
-    td{
-        background: #fbfbfb;
-    }
-    @media ( max-width: $screen-sm - 1 ) {
-        th, td{
-            display: block;
-            border-right: 0;
-            border-top: 0;
-            border-left: 0
-        }
-        tr{
-            &:last-of-type{
-                td{
-                    &:last-of-type{
-                        border-bottom: 0
-                    }
-                }
-            }
-        }
-    }
+.woocommerce-table--order-details {
+	margin-bottom: 50px;
+	margin-top: 0;
+	border: 0;
+
+	.wc-item-meta {
+		padding-left: 0;
+		margin: 0;
+
+		li {
+			list-style: none;
+
+			+li {
+				margin-top: 10px;
+			}
+
+			p {
+				display: inline-block;
+			}
+		}
+	}
+
+	th,
+	tr,
+	td {
+		border-left: 0;
+		border-right: 0;
+		padding: 15px 0;
+
+		&:nth-child(2) {
+			text-align: right;
+		}
+
+		a {
+			&:hover {
+				text-decoration: underline;
+			}
+		}
+	}
+
+	thead {
+		th {
+			text-transform: uppercase;
+		}
+	}
+
+	tbody {
+		strong {
+			font-weight: normal;
+		}
+	}
+
+	tfoot {
+		tr {
+			&:last-of-type {
+				th {
+					text-transform: uppercase;
+					font-weight: 700;
+				}
+			}
+		}
+	}
 }
 
-.woocommerce-customer-details{
-	.woocommerce-column__title{
+.woocommerce-customer-details {
+
+	.woocommerce-column__title {
 		font-size: 1.35em;
 		font-weight: normal;
-		background-color: #fbfbfb;
-		padding: 1em;
+		padding: 1em 0;
 		margin: 0;
 	}
-	address{
+
+	address {
 		margin: 0;
-		padding: 1em;
+		padding: 1em 0;
 		border-top: 1px solid #e8e8e8;
 	}
-	.woocommerce-column--1{
+
+	.woocommerce-column--1 {
 		float: left;
 		width: 48.5%;
 		border: 1px solid #e8e8e8;
 	}
-	.woocommerce-column--2{
+
+	.woocommerce-column--2 {
 		float: right;
 		width: 48.5%;
 		border: 1px solid #e8e8e8;
