--- a/assets/css/sass/woocommerce/checkout-page.scss
+++ b/assets/css/sass/woocommerce/checkout-page.scss
@@ -12,7 +12,6 @@
 .woocommerce-form-login-toggle {
 	border: 2px dashed #e8e8e8;
 	border-radius: 2px;
-	margin-bottom: 30px;
 	height: 100px;
 	padding-right: 30px;
 	padding-left: 100px;
@@ -20,13 +19,9 @@
 	background-repeat: no-repeat;
 	background-size: 40px 40px;
 	background-position: center left 30px;
-	@include flex(flex, flex-start, center);
-
-	@media (min-width: $screen-md) {
-		float: left;
-		width: calc(100% - 530px);
-		margin-right: 60px;
-	}
+	max-width: 600px;
+	margin: 0 auto 30px auto;
+	@extend .flex;
 
 	.woocommerce-info {
 		color: $inh;
@@ -35,16 +30,6 @@
 	.showlogin {
 		font-weight: 700;
 	}
-
-	~.checkout_coupon.woocommerce-form-coupon {
-		@media (min-width: $screen-md) {
-			width: 470px;
-			float: right;
-			position: absolute;
-			right: 0;
-			top: 0;
-		}
-	}
 }
 
 .woocommerce-form.woocommerce-form-login {
@@ -52,12 +37,13 @@
 	border: 2px dashed #e8e8e8;
 	border-radius: 2px;
 	padding: 30px;
-	margin-bottom: 30px;
+	max-width: 600px;
+	margin: 0 auto 30px auto;
 
-	@media (min-width: $screen-md) {
-		float: left;
-		width: calc(100% - 530px);
-		margin-right: 60px;
+	.form-row,
+	.form-row-first,
+	.form-row-last {
+		width: 100%;
 	}
 
 	p:not(.form-row):not(.lost_password) {
@@ -70,10 +56,22 @@
 		margin-left: 10px;
 	}
 
+	.woocommerce-form-login__rememberme {
+		text-align: center;
+	}
+
+	.woocommerce-form-login__submit {
+		padding-left: 40px;
+		padding-right: 40px;
+		display: block;
+		margin: 10px auto 0 auto;
+	}
+
 	.lost_password {
 		display: block;
 		clear: both;
 		margin-bottom: 0;
+		text-align: center;
 	}
 
 	.input-text {
@@ -83,66 +81,56 @@
 
 /* coupon form */
 .woocommerce-form-coupon-toggle {
-	display: none;
+	border: 2px dashed #e8e8e8;
+	border-radius: 2px;
+	height: 100px;
+	padding-right: 30px;
+	padding-left: 100px;
+	background-image: url(assets/images/coupon.svg);
+	background-repeat: no-repeat;
+	background-size: 40px 40px;
+	background-position: center left 30px;
+	max-width: 600px;
+	margin: 0 auto 30px auto;
+	@extend .flex;
 
-	+.woocommerce-error {
-		padding-top: 10px;
+	.woocommerce-info {
+		color: $inh;
+	}
+
+	.showcoupon {
+		font-weight: 700;
 	}
 }
 
 .checkout_coupon.woocommerce-form-coupon {
 	border: 2px dashed #e8e8e8;
 	border-radius: 2px;
-
-	@media (min-width: 601px) {
-		height: 100px $i;
-		padding-right: 30px;
-		padding-left: 100px;
-		background-image: url(assets/images/coupon.svg);
-		background-repeat: no-repeat;
-		background-size: 40px 40px;
-		background-position: center left 30px;
-		@include flex(flex, center, center,  !important);
-	}
-
-	@media (min-width: $screen-md) {
-		width: 640px;
-		margin: 0 auto;
-	}
+	max-width: 600px;
+	margin: 0 auto 30px auto;
+	padding: 30px;
+	justify-content: center;
+	align-items: center;
 
 	@media (max-width: $screen-md - 1) {
 		margin-top: 30px $i;
 	}
 
-	.form-row {
-		float: none;
+	.form-row-first,
+	.form-row-last{
+		width: 100%;
+		text-align: center;
+	}
+
+	.form-row-last {
 		margin-bottom: 0;
-		width: auto;
-
-		input,
-		button {
-			border-radius: 0;
-		}
 	}
 
-	.form-row-first {
-		@media (min-width: 601px) {
-			flex-grow: 1
-		}
-	}
-
-	[name="coupon_code"] {
+	button[type="submit"] {
+		margin-top: 10px;
+		padding: .35em 40px;
 		height: auto;
-		padding-left: 0;
-		border-width: 0 0 1px 0;
-	}
-
-	[name="apply_coupon"] {
-		border-bottom: 1px solid #e8e8e8;
-		font-size: 12px;
-		font-weight: 600;
-		text-transform: uppercase;
-		background-color: $tr;
+		color: #fff;
 	}
 
 	p:not(.form-row) {
@@ -431,41 +419,6 @@
 }
 
 @media (max-width: 600px) {
-	.woocommerce-form-login {
-		&.login {
-			.form-row {
-				width: 100%;
-			}
-		}
-	}
-
-	.woocommerce-form-coupon {
-		&.checkout_coupon {
-			display: block $i;
-			height: 150px $i;
-			padding: 30px $i;
-			flex-direction: column;
-
-			.form-row {
-				+.form-row {
-					margin-top: 10px;
-				}
-			}
-
-			input {
-				border-width: 1px $i;
-				padding: 0 15px $i;
-				height: 3em $i;
-			}
-
-			button {
-				width: 100%;
-				border-width: 1px $i;
-				height: 3em $i;
-			}
-		}
-	}
-
 	.woocommerce-billing-fields {
 
 		.form-row-first,
