--- a/assets/css/sass/woocommerce/shop-page.scss
+++ b/assets/css/sass/woocommerce/shop-page.scss
@@ -84,6 +84,8 @@
 .has-equal-image-height {
 	img {
 		position: absolute;
+		left: 0;
+		top: 0;
 		height: 100% !important;
 		width: 100%;
 		object-fit: cover;
