--- a/style.css
+++ b/style.css
@@ -9504,6 +9504,7 @@ footer#colophon {
 .woocommerce-account h2 {
   font-size: 20px;
   font-weight: normal;
+  text-align: center;
 }
 
 .woocommerce-account .entry-title {
@@ -9517,7 +9518,7 @@ footer#colophon {
 .woocommerce-account .woocommerce-form.woocommerce-form-login {
   border-top: 2px dashed #e8e8e8;
   width: 100%;
-  margin-right: 0;
+  margin: 0 auto;
 }
 
 @media (min-width: 992px) {
